--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,13 +8,27 @@
     <base target="_blank">
 
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Constnium</title>
     <meta name="author" content="Mylloon">
     <meta name="description" content="Calculate your constant based on your first name">
+
+    <link rel="apple-touch-icon" sizes="114x114" href="./icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
+    <link rel="manifest" href="./icons/site.webmanifest">
+    <link rel="mask-icon" href="./icons/safari-pinned-tab.svg" color="#b5f4db">
+    <link rel="shortcut icon" href="./icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#b5f4db">
+    <meta name="msapplication-config" content="./icons/browserconfig.xml">
+    <meta name="theme-color" content="#b5f4db">
 </head>
 <body>
+    <img src="images/logo.webp" class="img-fluid rounded mx-auto d-block" alt="Banner">
     <hr>
-    <%- readme %>
+    <figure class="text-center">
+        <%- readme %>
+    </figure>
 </body>
 </html>
