remove rounded logo

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#b5f4db">
 </head>
 <body>
-    <img src="images/logo.webp" class="img-fluid rounded mx-auto d-block" alt="Banner">
+    <img src="images/logo.webp" class="img-fluid mx-auto d-block" alt="Banner">
     <hr>
     <figure class="text-center">
         <%- readme %>
