--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -26,9 +26,14 @@
 </head>
 <body>
     <img src="images/logo.webp" class="img-fluid mx-auto d-block" alt="Banner">
+
+    <input id="firstname" class="form-control form-control-lg mx-auto d-block" type="text" placeholder="Maria">
+
     <hr>
     <figure class="text-center">
         <%- readme %>
     </figure>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
