Fetch the firstname placeholder from nodejs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -27,7 +27,7 @@
 <body>
     <img src="images/logo.webp" class="img-fluid mx-auto d-block" alt="Banner">
 
-    <input id="firstname" class="form-control form-control-lg mx-auto d-block" type="text" placeholder="Maria">
+    <input id="firstname" class="form-control form-control-lg mx-auto d-block" type="text" placeholder="<%- firstname_placeholder %>">
 
     <hr>
     <figure class="text-center">
