* Show the firstname in BIG * Update c,k,q,t * Add h,i,n,o,r,x,z

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,14 @@
     width: 50% !important;
     text-align: center;
 }
+
+.firstname-constant {
+    height: 15em;
+    min-height: 15em;
+    max-height: 15em;
+}
+
+.firstname-constant p {
+    text-align: center;
+    font-size: 10em;
+}
