--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -29,6 +29,8 @@
 
     <input id="firstname" class="form-control form-control-lg mx-auto d-block" type="text" placeholder="<%- firstname_placeholder %>" autofocus>
 
+    <div class="firstname-constant"></div>
+
     <hr>
     <figure class="text-center">
         <%- readme %>
