--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -27,12 +27,12 @@
 <body>
     <img src="images/logo.webp" class="img-fluid mx-auto d-block" alt="Banner">
 
-    <input id="firstname" class="form-control form-control-lg mx-auto d-block" type="text" placeholder="<%- firstname_placeholder %>" autofocus>
+    <input id="firstname" class="form-control center" type="text" placeholder="<%- firstname_placeholder %>" autofocus>
 
-    <div class="firstname-constant"></div>
+    <div class="center firstname-constant"></div>
 
     <hr>
-    <figure class="text-center">
+    <figure class="center">
         <%- readme %>
     </figure>
 
