--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,6 @@ span {
     font-size: 50px;
     border: 2px;
     border-style: groove;
-    background-color: black;
+    background-color: rgb(192, 192, 192);
     border-radius: 5px;
 }
